# SuperAi-SS6-MiniHack3

./: .env  README.md  main.py  pyproject.toml  starter_kit_FahMai_RAG.ipynb
data/: ground_truth.csv
srcs/: rag_pipeline_fahmai.ipynb  rag_pipeline_fahmai_hybrid.ipynb
srcs/trace/: trace_log.json  trace_log.jsonl
submission/: submission_20260327_152406.csv  submission_20260327_152619.csv  submission_20260327_155744.csv  submission_20260327_165615.csv  submission_20260327_174851.csv  submission_20260327_213320.csv  submission_20260327_215014.csv  submission_20260328_080252.csv  submission_20260328_083256.csv  submission_20260328_123749.csv  submission_20260328_131207.csv  submission_20260328_141727.csv  submission_20260329_005842.csv
