[project]
name = "superai-ss6-minihack3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google>=3.0.0",
    "ipykernel>=7.2.0",
    "ipynb>=0.5.1",
    "pythainlp>=5.3.3",
    "python-dotenv>=1.2.2",
    "rank-bm25>=0.2.2",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
]
