[project]
name = "superai-ss6-minihack3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "langchain>=1.2.13",
    "langchain-text-splitters>=1.1.1",
    "numpy>=2.4.3",
    "ollama>=0.6.1",
    "pandas>=3.0.1",
    "rank-bm25>=0.2.2",
    "requests>=2.33.0",
    "sentence-transformers>=5.3.0",
    "tqdm>=4.67.3",
]
